--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-quill": "^2.0.0",
+    "react-quilljs": "^1.3.3",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
